--- a/fullstackeletro/css/estilo.css
+++ b/fullstackeletro/css/estilo.css
@@ -1,11 +1,30 @@
 /*@charset "UTF-8";
 
-h4 {
-    color: red;
+body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-p {
-    font-family: Arial, Helvetica, sans-serif;
-}*/
+#formas_pagamento {
+    color: red;
+}
 
+.menu {
+    width: 100%;
+    height: 100%;
+    background-color: #f74104;
+}
+
+ 
+.menu a {
+    color: white;
+    text-decoration: none;
+}
+
+
+#rodape {
+    text-align: center;
+}
+
+#menu{
+
+}*/
