--- a/fullstackeletro/css/estilo.css
+++ b/fullstackeletro/css/estilo.css
@@ -1,4 +1,32 @@
-/*@charset "UTF-8";
+@charset "UTF-8";
+
+* {
+    margin: 0%;
+    padding: 0%;
+}
+
+.cabecalho {
+    background-color: #f74307;
+    min-height: 150px;
+    padding-top: 30px;
+    
+}
+
+.menu {
+    padding: 20px;
+    background-color: #f74104;
+}
+
+.menu a {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+
 
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -7,24 +35,7 @@ body {
 #formas_pagamento {
     color: red;
 }
-
-.menu {
-    width: 100%;
-    height: 100%;
-    background-color: #f74104;
-}
-
  
-.menu a {
-    color: white;
-    text-decoration: none;
-}
-
-
 #rodape {
     text-align: center;
 }
-
-#menu{
-
-}*/
