--- a/fullstackeletro/css/estilo.css
+++ b/fullstackeletro/css/estilo.css
@@ -1,31 +1,70 @@
-@charset "UTF-8";
+/*@charset "UTF-8";
 
 * {
-    margin: 0%;
-    padding: 0%;
+    margin: 0px;
+    padding: 0px;
+   
 }
 
 .cabecalho {
-    background-color: #f74307;
-    min-height: 150px;
-    padding-top: 30px;
-    
+    text-align: center;
+    padding: 30px;
+    background-color: black;
 }
+
 
 .menu {
-    padding: 20px;
-    background-color: #f74104;
+    padding: 30px;
+    text-align: center;
+    background-image: linear-gradient(to bottom, #8eba1c, #4d6806);
+    min-height: 20px;
+    padding-top: 40px;
 }
 
+
+
 .menu a {
+    border-radius: 5px;
     font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
     color: white;
     padding: 10px;
     text-decoration: none;
     font-weight: bold;
+    transition-duration: 0.5s;
 }
 
+.menu > a:hover {
+    background-color: #8eba1c;
+    color: #4d6806;
+}
+
+
+section.imagem {
+    
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 450px;
+    background-image: url('../imagens/banner-nutri1.jpg');
+    
+}
+
+.normal {
+    
+    width: 100%;
+    height: 100%;
+    background-color: #82aa1d9b;
+    color: white;
+    text-align: center;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 55px;
+}
+
+div.normal > p {
+    padding-top: 70px;
+}
 
 
 body {
@@ -35,7 +74,18 @@ body {
 #formas_pagamento {
     color: red;
 }
+
  
 #rodape {
     text-align: center;
 }
+
+.categorias {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+}
+*/
+
+
