--- a/fullstackeletro/css/estilo.css
+++ b/fullstackeletro/css/estilo.css
@@ -1,4 +1,4 @@
-/*@charset "UTF-8";
+@charset "UTF-8";
 
 * {
     margin: 0px;
@@ -86,6 +86,6 @@ body {
     margin-bottom: 20px;
     padding-bottom: 10px;
 }
-*/
+
 
 
